Security hardening: fix 8 vulnerabilities across auth, CORS, rate limiting, error handling, and input validation